apps/quote-api/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: quote-api-ingress
  labels:
    app.kubernetes.io/name: quote-api
    app.kubernetes.io/part-of: lendora
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: quote-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              lendora.io/quote-api-client: "true"
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 80
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: lendora-sta-consul
      ports:
        - protocol: TCP
          port: 8080
